Modified Routes to factor in localization

--- a/resources/lang/fr.json
+++ b/resources/lang/fr.json
@@ -6,6 +6,11 @@
     "Remember Me":"Souviens-toi de moi",
     "Forgot Your Password?":"Mot de passe oublié?",
     "Admin Area":"Zone d'Administration",
-    "Welcome to KodeKlinik":"Bienvenue à KodeKlinik"
+    "Welcome to KodeKlinik":"Bienvenue à KodeKlinik",
+    "Home":"Accueil",
+    "Developers":"Développeurs",
+    "Portfolio":"Portefeuille",
+    "About Us":"Notre Equipe",
+    "Contact Us":"Contactez Nous"
 
 }
