--- a/resources/lang/it.json
+++ b/resources/lang/it.json
@@ -6,7 +6,12 @@
     "Remember Me":"Ricordati di me",
     "Forgot Your Password?":"Hai dimenticato la password?",
     "Admin Area":"Area di Amministrazione",
-    "Welcome to KodeKlinik":"Benvenuti in KodeKlinik"
+    "Welcome to KodeKlinik":"Benvenuti in KodeKlinik",
+    "Home":"Casa",
+    "Developers":"Sviluppatori",
+    "Portfolio":"Portafoglio",
+    "About Us":"Squadra",
+    "Contact Us":"Contattaci"
     
 
 }
